--- a/LearnSpas/Windows/StartWindow.xaml
+++ b/LearnSpas/Windows/StartWindow.xaml
@@ -11,6 +11,21 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <Button Content="click" Grid.Row="2"/>
+        <TextBlock Text="hello" Grid.Row="3"/>
+        <TextBox Text="print" Grid.Row="4"/>
+        <PasswordBox Grid.Row="1"/>
     </Grid>
 </Window>
