--- a/LearnSpas/Styles/TextBlockStyle.xaml
+++ b/LearnSpas/Styles/TextBlockStyle.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="TextBlock">
-        <!-- FontSise = "20"-->
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontFamily" Value="Tahoma" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <!-- set + TAB -->
-        <!-- FF + TAB = FontFamily -->
+        <Setter Property="Foreground" Value="#FFFFFF" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <!--<Setter Property="BorderBrush" Value="#026DD0" />-->
 
     </Style>
 </ResourceDictionary>
