--- a/LearnSpas/Styles/TextBoxStyle.xaml
+++ b/LearnSpas/Styles/TextBoxStyle.xaml
@@ -5,6 +5,9 @@
         <Setter Property="FontFamily" Value="Tahoma" />
         <Setter Property="Padding" Value="5" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="BorderBrush" Value="Black" />
+        <Setter Property="BorderBrush" Value="#026DD0" />
+        <Setter Property="Background" Value="#131F24" />
+        <Setter Property="Height" Value="50" />
+        
     </Style>
 </ResourceDictionary>
