--- a/LearnSpas/Windows/StartWindow.xaml
+++ b/LearnSpas/Windows/StartWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LearnSpas.Windows"
         mc:Ignorable="d"
-        Title="StartWindow" Height="450" Width="800">
+        Title="StartWindow" Height="450" Width="800" Background="#131F24">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
@@ -23,7 +23,9 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
-        <Button Content="click" Grid.Row="1"/>
-        
+        <Button Content="click" Grid.Row="3"/>
+        <TextBlock Text="hello"/>
+        <TextBox Text="Print Login" Foreground="#293B43" Grid.Row="1"/>
+        <PasswordBox Grid.Row="2"/>
     </Grid>
 </Window>
