--- a/LearnSpas/Styles/TextBoxStyle.xaml
+++ b/LearnSpas/Styles/TextBoxStyle.xaml
@@ -7,7 +7,8 @@
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="BorderBrush" Value="#026DD0" />
         <Setter Property="Background" Value="#131F24" />
-        <Setter Property="Height" Value="50" />
-        
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Foreground" Value="#293B43"/>
+
     </Style>
 </ResourceDictionary>
