--- a/LearnSpas/Windows/LevelWindow.xaml
+++ b/LearnSpas/Windows/LevelWindow.xaml
@@ -76,7 +76,7 @@
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="80" />
             </Grid.RowDefinitions>
-
+<!--Разметка синего модуля.--> 
             <Grid Background="#026DD0" Margin="15">
                 <Grid Grid.RowSpan="2">
                     <Grid.RowDefinitions>
@@ -84,14 +84,31 @@
                         <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
-                    <TextBlock Text="Модуль 1" FontSize="15" Foreground="#949DA1"
-                           HorizontalAlignment="Left" Margin="30 0 0 0"/>
+                    
                     <TextBlock Grid.Row="1" Text="Ознакомительное занятие" FontSize="20"
                            HorizontalAlignment="Left" Margin="10 -30 0 0"
                            Foreground="White"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="200" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        
+                        <Image Source="/Resources/Icons/Strelka.png" 
+                               Width="15" HorizontalAlignment="Left"
+                               Margin="11 0 0 0"/>
+                        <Button Background="Transparent" HorizontalAlignment="Left"
+                                Margin="23 0 0 0" BorderBrush="Transparent"
+                                Height="25">
+                            <TextBlock Text="Модуль 1"
+                                       Foreground="#949DA1"
+                                       FontSize="15"/>
+                        </Button>
+
+                    </Grid>
                 </Grid>
             </Grid>
-                
+         <!--Уровень 1.-->        
                 
                 
         </Grid>
