--- a/LearnSpas/App.xaml
+++ b/LearnSpas/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:LearnSpas"
-             StartupUri="\Windows\LevelWindow.xaml">
+             StartupUri="\Windows\AdditionalMaterialWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
