--- a/LearnSpas/Windows/MkadWindow.xaml
+++ b/LearnSpas/Windows/MkadWindow.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LearnSpas.Windows"
         mc:Ignorable="d"
-        Title="MkadWindow" Height="450" Width="800">
+        Title="StartWindow" Height="450" Width="800" Background="#131F24">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Image Source="/Resources/Images/Mkad.png" Grid.Row="1"/>
+        <Button Background="Transparent" BorderBrush="Transparent"
+                HorizontalAlignment="Left" VerticalAlignment="Top" 
+                Width="40" Height="30" Margin="10 10 0 0"
+                Name="CloseBtn" Click="CloseBtn_Click"
+                Focusable="False">
+            <Image Source="/Resources/Icons/Close.png" />
+
+        </Button>
+
     </Grid>
 </Window>
