--- a/LearnSpas/Windows/BylvarnoeKolco.xaml
+++ b/LearnSpas/Windows/BylvarnoeKolco.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LearnSpas.Windows"
         mc:Ignorable="d"
-        Title="BylvarnoeKolco" Height="450" Width="800">
+        Title="StartWindow" Height="450" Width="800" Background="#131F24">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="60" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <Image Source="/Resources/Images/BylvarnoeKolco.png" Grid.Column="1"/>
+
+        <Button Background="Transparent" BorderBrush="Transparent"
+                HorizontalAlignment="Left" VerticalAlignment="Top" 
+                Width="40" Height="30" Margin="10 10 0 0"
+                Name="CloseBtn" Click="CloseBtn_Click">
+            <Image Source="/Resources/Icons/Close.png" />
+
+        </Button>
     </Grid>
 </Window>
