--- a/LearnSpas/Windows/MkadWindow.xaml
+++ b/LearnSpas/Windows/MkadWindow.xaml
@@ -15,8 +15,7 @@
         <Button Background="Transparent" BorderBrush="Transparent"
                 HorizontalAlignment="Left" VerticalAlignment="Top" 
                 Width="40" Height="30" Margin="10 10 0 0"
-                Name="CloseBtn" Click="CloseBtn_Click"
-                Focusable="False">
+                Name="CloseBtn" Click="CloseBtn_Click">
             <Image Source="/Resources/Icons/Close.png" />
 
         </Button>
