--- a/LearnSpas/Windows/BylvarnoeKolco.xaml
+++ b/LearnSpas/Windows/BylvarnoeKolco.xaml
@@ -17,7 +17,8 @@
         <Button Background="Transparent" BorderBrush="Transparent"
                 HorizontalAlignment="Left" VerticalAlignment="Top" 
                 Width="40" Height="30" Margin="10 10 0 0"
-                Name="CloseBtn" Click="CloseBtn_Click">
+                Name="CloseBtn" Click="CloseBtn_Click"
+                Focusable="False">
             <Image Source="/Resources/Icons/Close.png" />
 <!--и-->
         </Button>
