--- a/LearnSpas/Windows/BylvarnoeKolco.xaml
+++ b/LearnSpas/Windows/BylvarnoeKolco.xaml
@@ -17,8 +17,7 @@
         <Button Background="Transparent" BorderBrush="Transparent"
                 HorizontalAlignment="Left" VerticalAlignment="Top" 
                 Width="40" Height="30" Margin="10 10 0 0"
-                Name="CloseBtn" Click="CloseBtn_Click"
-                FocusableChanged="CloseBtn_FocusableChanged">
+                Name="CloseBtn" Click="CloseBtn_Click">
             <Image Source="/Resources/Icons/Close.png" />
         </Button>
     </Grid>
