--- a/LearnSpas/Windows/ConfirmationWindow.xaml
+++ b/LearnSpas/Windows/ConfirmationWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LearnSpas.Windows"
         mc:Ignorable="d"
-        Title="ConfirmationWindow" Height="450" Width="800">
+        Title="StartWindow" Height="450" Width="800" Background="#131F24">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Хотите выйти из аккаунта?" Grid.ColumnSpan="2" FontSize="30" Margin="0 100 0 0"/>
+        <Button Content="Да" Name="Yes" Click="Yes_Click" Grid.Row="1"  Margin="60 -100 30 10"/>
+        <Button Content="Нет" Name="No" Click="No_Click"  Grid.Row="1" Grid.Column="1" Margin="30 -100 60 10"/>
     </Grid>
 </Window>
