--- a/LearnSpas/Windows/AdditionalMaterialWindow.xaml
+++ b/LearnSpas/Windows/AdditionalMaterialWindow.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="1*" />
 
         </Grid.RowDefinitions>
-        
+        <!--вфамфывмфывм-->
         <Grid Grid.RowSpan="11" Background="#293B43">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*" />
